fix: numbering alignment in custom text

--- a/src/components/Text/style.module.scss
+++ b/src/components/Text/style.module.scss
@@ -8,8 +8,10 @@
     gap: 1rem;
     &::before {
         content: counter(line);
-        width: 0.1rem;
+        text-align: right;
+        width: 2rem;
         margin-right: 0.5rem;
         height: 100%;
+        right: 0;
     }
 }
